--- a/documentation/Rmd/RepeatMasker-dmelLR.Rmd
+++ b/documentation/Rmd/RepeatMasker-dmelLR.Rmd
@@ -1,7 +1,17 @@
-Drosophila melanogaster - TE invasions in 49 LR assemblies
-================
+---
+title: "Drosophila melanogaster - TE invasions in 49 LR assemblies"
+output: rmarkdown::github_document
+editor_options: 
+  markdown: 
+    wrap: sentence
+    author: Riccardo
+---
 
-``` r
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r}
 suppressPackageStartupMessages(library(tidyverse))
 suppressPackageStartupMessages(library(knitr))
 suppressPackageStartupMessages(library(kableExtra))
@@ -10,33 +20,13 @@ suppressPackageStartupMessages(library(svglite))
 theme_set(theme_bw())
 ```
 
-``` r
+```{r}
 dmel_lr_meta <- read_tsv("/Volumes/Storage/dmel-full-story/longread-metadata.txt") %>% select(strain, year, continent, lat, lon)
-```
 
-    ## Rows: 49 Columns: 7
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: "\t"
-    ## chr (4): GCA, strain, continent, location
-    ## dbl (3): year, lat, lon
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-``` r
 RM <- read_tsv("/Volumes/Storage/dmel-full-story/RepeatMasker/RM-longreads/merged.clean.sum", col_names = c("rm","SW","pid","contig","qstart","qend","strand","te","rstart","rend","score","strain")) %>% mutate(len = ifelse(qstart>qend, qstart-qend, qend-qstart), strain = gsub("D.mel.","",strain)) %>% inner_join(dmel_lr_meta, by="strain") %>% filter(te!="Shellder") %>% distinct()
 ```
 
-    ## Rows: 296691 Columns: 12
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: "\t"
-    ## chr (5): rm, contig, strand, te, strain
-    ## dbl (7): SW, pid, qstart, qend, rstart, rend, score
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-``` r
+```{r}
 RM_full_len <- RM %>% filter(!(te %in% c("Hobo","PPI251","Transib_Riccardo"))) %>% select(strain, te, SW, pid, len, score, year) %>% filter(score > 0.8, pid < 1)
 RM_DNA_TE <- RM %>% filter(te %in% c("Hobo","Transib_Riccardo","PPI251")) %>% select(strain, te, SW, pid, len, score, year) %>% filter(score > 0.5, pid < 1)
 RM_P <- RM %>% filter(te == "PPI251") %>% select(strain, te, SW, pid, len, score, year) %>% filter(score > 0.25, pid < 1)
@@ -49,12 +39,7 @@ repeated_combinations <- combinations[rep(1:nrow(combinations), each = 11), ]
 dummy <- as_tibble(repeated_combinations) %>% distinct() %>% inner_join(strains, by="strain")
 
 RM_plottable <- RM_count %>% group_by(strain, te, year) %>% summarise(insertions = n()) %>% right_join(dummy, by=c("strain","te","year")) %>% mutate(insertions = ifelse(is.na(insertions), -1, insertions)) %>% mutate(presence = ifelse(insertions>1, "present", "absent"), year = ifelse(is.na(year), 1975, year), te=ifelse(te=="Transib_Riccardo","Transib1",te))
-```
 
-    ## `summarise()` has grouped output by 'strain', 'te'. You can override using the
-    ## `.groups` argument.
-
-``` r
 RM_plottable$te <- factor(RM_plottable$te, levels = c("Blood", "Opus", "412", "Tirant", "DMIFACA", "Hobo", "PPI251", "Spoink", "Micropia", "Souslik", "Transib1"))
 
 insertions_plot <- ggplot(RM_plottable, aes(x=reorder(strain,year), y=insertions, fill=presence))+
@@ -67,9 +52,7 @@ scale_fill_manual(values = c("darkgreen", "red"))+
 ggsave("/Volumes/Storage/dmel-full-story/figures/LR-08.png", insertions_plot, height = 20)
 ```
 
-    ## Saving 7 x 20 in image
-
-``` r
+```{r}
 to_map <- RM_plottable %>% inner_join(dmel_lr_meta, by=c("strain","year")) %>% ungroup()
 to_map$presence <- factor(to_map$presence, levels = c("present", "absent"))
 
@@ -79,24 +62,7 @@ world_map <- subset(world_map, region != "Antarctica")
 tomap_sous <- to_map %>% filter(te == "Souslik") %>% mutate(year = ifelse(year > 2003, ">2003", "<2003"))
 tomap_tra <- to_map %>% filter(te == "Transib1") %>% mutate(year = ifelse(year > 2011, ">2011", "<2011"))
 (tomap_mic <- to_map %>% filter(te == "Micropia") %>% mutate(year = ifelse(year > 1995, ">1995", "<1995")))
-```
 
-    ## # A tibble: 47 × 8
-    ##    strain te       year  insertions presence continent   lat   lon
-    ##    <chr>  <fct>    <chr>      <dbl> <fct>    <chr>     <dbl> <dbl>
-    ##  1 AKA017 Micropia >1995          9 present  Europe       62    29
-    ##  2 AKA018 Micropia >1995         12 present  Europe       62    29
-    ##  3 COR014 Micropia >1995         12 present  Europe       38    -3
-    ##  4 COR018 Micropia >1995         13 present  Europe       38    -3
-    ##  5 COR023 Micropia >1995         10 present  Europe       38    -3
-    ##  6 COR025 Micropia >1995         12 present  Europe       38    -3
-    ##  7 GIM012 Micropia >1995          6 present  Europe       42     0
-    ##  8 GIM024 Micropia >1995         10 present  Europe       42     0
-    ##  9 JUT008 Micropia >1995          9 present  Europe       56     9
-    ## 10 JUT011 Micropia >1995         10 present  Europe       56     9
-    ## # ℹ 37 more rows
-
-``` r
 (lr_map_sous <- ggplot() +
     geom_map(data = world_map, map = world_map,
              aes(long, lat, map_id = region),
@@ -106,16 +72,7 @@ tomap_tra <- to_map %>% filter(te == "Transib1") %>% mutate(year = ifelse(year >
   theme(axis.text = element_blank(), axis.title = element_blank(), axis.ticks = element_blank(), legend.position = "bottom") +
   facet_wrap(~year)+
   labs(color = "Souslik")
-```
 
-    ## Warning in geom_map(data = world_map, map = world_map, aes(long, lat, map_id =
-    ## region), : Ignoring unknown aesthetics: x and y
-
-    ## Warning: Removed 1 rows containing missing values (`geom_point()`).
-
-![](RepeatMasker-dmelLR_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
-
-``` r
 (lr_map_tra <- ggplot() +
     geom_map(data = world_map, map = world_map,
              aes(long, lat, map_id = region),
@@ -125,14 +82,7 @@ tomap_tra <- to_map %>% filter(te == "Transib1") %>% mutate(year = ifelse(year >
   theme(axis.text = element_blank(), axis.title = element_blank(), axis.ticks = element_blank(), legend.position = "bottom") +
   facet_wrap(~year)+
   labs(color = "Transib")
-```
 
-    ## Warning in geom_map(data = world_map, map = world_map, aes(long, lat, map_id = region), : Ignoring unknown aesthetics: x and y
-    ## Removed 1 rows containing missing values (`geom_point()`).
-
-![](RepeatMasker-dmelLR_files/figure-gfm/unnamed-chunk-4-2.png)<!-- -->
-
-``` r
 (lr_map_mic <- ggplot() +
     geom_map(data = world_map, map = world_map,
              aes(long, lat, map_id = region),
@@ -143,8 +93,3 @@ tomap_tra <- to_map %>% filter(te == "Transib1") %>% mutate(year = ifelse(year >
   facet_wrap(~year)+
   labs(color = "Micropia")
 ```
-
-    ## Warning in geom_map(data = world_map, map = world_map, aes(long, lat, map_id = region), : Ignoring unknown aesthetics: x and y
-    ## Removed 1 rows containing missing values (`geom_point()`).
-
-![](RepeatMasker-dmelLR_files/figure-gfm/unnamed-chunk-4-3.png)<!-- -->
