Color change LR
Changed color for presence-absence in LR (pink-blue), to differentiate from new snps freq in short reads (green-red)

--- a/documentation/RepeatMasker-dmelLR.Rmd
+++ b/documentation/RepeatMasker-dmelLR.Rmd
@@ -24,6 +24,8 @@ theme_set(theme_bw())
 dmel_lr_meta <- read_tsv("/Volumes/Storage/dmel-full-story/longread-metadata.txt") %>% select(strain, year, continent, lat, lon)
 
 RM <- read_tsv("/Volumes/Storage/dmel-full-story/RepeatMasker/RM-longreads/merged.clean.sum", col_names = c("rm","SW","pid","contig","qstart","qend","strand","te","rstart","rend","score","strain")) %>% mutate(len = ifelse(qstart>qend, qstart-qend, qend-qstart), strain = gsub("D.mel.","",strain)) %>% inner_join(dmel_lr_meta, by="strain") %>% filter(te!="Shellder") %>% distinct()
+
+write_tsv(RM, "/Volumes/Storage/GitHub/Dmel-200years/data/RM-readable.tsv")
 ```
 
 ```{r}
@@ -44,9 +46,9 @@ RM_plottable$te <- factor(RM_plottable$te, levels = c("Blood", "Opus", "412", "T
 
 insertions_plot <- ggplot(RM_plottable, aes(x=reorder(strain,year), y=insertions, fill=presence))+
   geom_bar(stat = "identity")+
-    labs(x="", y="copynumber")+
+    labs(x="", y="copynumber", fill="TE")+
     facet_wrap(~te, ncol=1)+
-scale_fill_manual(values = c("darkgreen", "red"))+
+scale_fill_manual(values = c("violet", "darkblue"))+
     theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1, size=4), legend.position = "top", legend.key.size = unit(0.2, "cm"))
 
 ggsave("/Volumes/Storage/dmel-full-story/figures/LR-08.png", insertions_plot, height = 20)
@@ -54,21 +56,21 @@ ggsave("/Volumes/Storage/dmel-full-story/figures/LR-08.png", insertions_plot, he
 
 ```{r}
 to_map <- RM_plottable %>% inner_join(dmel_lr_meta, by=c("strain","year")) %>% ungroup()
-to_map$presence <- factor(to_map$presence, levels = c("present", "absent"))
+to_map$presence <- factor(to_map$presence, levels = c("absent", "present"))
 
 world_map <- map_data("world")
 world_map <- subset(world_map, region != "Antarctica")
 
 tomap_sous <- to_map %>% filter(te == "Souslik") %>% mutate(year = ifelse(year > 2003, ">2003", "<2003"))
 tomap_tra <- to_map %>% filter(te == "Transib1") %>% mutate(year = ifelse(year > 2011, ">2011", "<2011"))
-(tomap_mic <- to_map %>% filter(te == "Micropia") %>% mutate(year = ifelse(year > 1995, ">1995", "<1995")))
+tomap_mic <- to_map %>% filter(te == "Micropia") %>% mutate(year = ifelse(year > 1995, ">1995", "<1995"))
 
 (lr_map_sous <- ggplot() +
     geom_map(data = world_map, map = world_map,
              aes(long, lat, map_id = region),
              color = "white", fill = "cornsilk3", linewidth = 0) +
    geom_point(data = tomap_sous, aes(x = lon, y = lat, color = presence), size = 4, position = position_jitter(width = 1, height = 1), alpha = 0.5)) +
-   scale_colour_manual(values = c("red", "darkgreen")) +
+   scale_colour_manual(values = c("violet", "darkblue")) +
   theme(axis.text = element_blank(), axis.title = element_blank(), axis.ticks = element_blank(), legend.position = "bottom") +
   facet_wrap(~year)+
   labs(color = "Souslik")
@@ -78,7 +80,7 @@ tomap_tra <- to_map %>% filter(te == "Transib1") %>% mutate(year = ifelse(year >
              aes(long, lat, map_id = region),
              color = "white", fill = "cornsilk3", linewidth = 0) +
    geom_point(data = tomap_tra, aes(x = lon, y = lat, color = presence), size = 4, position = position_jitter(width = 1, height = 1), alpha = 0.5)) +
-   scale_colour_manual(values = c("red", "darkgreen")) +
+   scale_colour_manual(values = c("violet", "darkblue")) +
   theme(axis.text = element_blank(), axis.title = element_blank(), axis.ticks = element_blank(), legend.position = "bottom") +
   facet_wrap(~year)+
   labs(color = "Transib")
@@ -88,7 +90,7 @@ tomap_tra <- to_map %>% filter(te == "Transib1") %>% mutate(year = ifelse(year >
              aes(long, lat, map_id = region),
              color = "white", fill = "cornsilk3", linewidth = 0) +
    geom_point(data = tomap_mic, aes(x = lon, y = lat, color = presence), size = 4, position = position_jitter(width = 1, height = 1), alpha = 0.5)) +
-   scale_colour_manual(values = c("red", "darkgreen")) +
+   scale_colour_manual(values = c("violet", "darkblue")) +
   theme(axis.text = element_blank(), axis.title = element_blank(), axis.ticks = element_blank(), legend.position = "bottom") +
   facet_wrap(~year)+
   labs(color = "Micropia")
